--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SmoothieDelight</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,800&display=swap" rel="stylesheet">
+    <title>SmoothieDelight Food Factor</title>
 </head>
 <body>
     <div id="app"></div>
